--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 
 <h1>Title</h1>
+<nav>
+    <ul>
+        <li>a</li>
+        <li>b</li>
+        <li>c</li>
+    </ul>
+</nav>
 
 <body>
     
